--- a/shift-swap-v2/src/styling/App.css
+++ b/shift-swap-v2/src/styling/App.css
@@ -4,9 +4,25 @@ body {
 }
 
 .navbar {
-  background-color: white;
+  background-color: rgba(255,255,255,0.8);
+  position: absolute;
   width: 100%;
-  height: 150px;
+  height: 50px;
+  margin-top: 40px;
+  text-align: center;
+}
+
+.nav {
+  justify-content: space-between;
+}
+
+.left-nav, .right-nav{
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-item {
+  display: flex;
 }
 .App {
   text-align: center;
