--- a/shift-swap-v2/src/styling/welcome.css
+++ b/shift-swap-v2/src/styling/welcome.css
@@ -1,14 +1,14 @@
 .anon-greeting {
   display: flex;
   margin-top: 400px;
-  margin-left: 400px;
+  margin-left: 100px;
   font-size: 40px;
   width: 300px;
 }
 
 .SignupForm, .LoginForm {
-  position: absolute;
   display: flex;
   margin-top: 300px;
   margin-right: 400px;
+  flex-direction: column;
 }
