--- a/shift-swap-v2/src/styling/welcome.css
+++ b/shift-swap-v2/src/styling/welcome.css
@@ -8,7 +8,30 @@
 
 .SignupForm, .LoginForm {
   display: flex;
-  margin-top: 300px;
-  margin-right: 400px;
+  width: 250px;
+  height: 400px;
+  background-color: rgba(255, 255, 255, 0.7);
   flex-direction: column;
+  z-index: 3;
+}
+
+.session-form {
+  position: fixed;
+  display: flex;
+  background-color: rgba(255, 255, 255, 0);
+  width: 110%;
+  height: 100%;
+  top: 0px;
+
+
+
+
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+  z-index: 2;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
