--- a/shift-swap-v2/src/styling/welcome.css
+++ b/shift-swap-v2/src/styling/welcome.css
@@ -8,8 +8,9 @@
 
 .SignupForm, .LoginForm {
   display: flex;
-  width: 250px;
-  height: 400px;
+  width: 291px;
+  height: 360px;
+  border-radius: 25px;
   background-color: rgba(255, 255, 255, 0.7);
   flex-direction: column;
   z-index: 3;
@@ -18,7 +19,7 @@
 .session-form {
   position: fixed;
   display: flex;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.3);
   width: 110%;
   height: 100%;
   top: 0px;
@@ -34,4 +35,31 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.SignupForm > h1, .LoginForm > h1{
+  margin-top: 20px;
+  font-size: 25px;
+}
+input, button {
+  display: flex;
+  width: 191px;
+  height: 30px;
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-bottom: 15px;
+}
+
+button {
+  display: flex;
+  text-align: center;
+  color: white;
+  border-radius: 25px;
+  background-color: #0275d8;
+  justify-content: center;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: blue;
 }
