--- a/shift-swap-v2/src/styling/App.css
+++ b/shift-swap-v2/src/styling/App.css
@@ -3,6 +3,8 @@ body {
   margin: 0px;
 }
 
+
+
 .navbar {
   background-color: rgba(255,255,255,0.8);
   position: absolute;
@@ -25,6 +27,7 @@ body {
   display: flex;
 }
 .App {
+  font-family: sans-serif;
   text-align: center;
   position: absolute;
   display: flex;
