--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -3,6 +3,11 @@ body {
   margin: 0px;
 }
 
+.app-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .navbar {
   background-color: rgba(255,255,255,0.8);
   position: absolute;
@@ -24,7 +29,7 @@ body {
 .nav-item {
   display: flex;
 }
-.App {
+.NavBar {
   text-align: center;
   position: absolute;
   display: flex;
