--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -41,7 +41,7 @@ body {
 .app-container {
   height: 100vh;
 }
-
+/*
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -62,4 +62,4 @@ body {
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+} */
