--- a/src/styling/Calendar.css
+++ b/src/styling/Calendar.css
@@ -1,9 +1,12 @@
-.calendar {
-  /* height: 100%; */
-  /* width: 100%;
+#calendar {
+  position: absolute;
+  background-color: white;
+  z-index: 2;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background: white; */
-  /* margin-top: 150px; */
+  width: 600px;
+  height: 400px;
+  color: black;
+  margin-left: 300px;
+  margin-top: 200px;
+  border: 2px solid black;
 }
