--- a/src/styling/Calendar.css
+++ b/src/styling/Calendar.css
@@ -1,4 +1,4 @@
-#calendar {
+/* #calendar {
   position: absolute;
   background-color: white;
   z-index: 2;
@@ -9,4 +9,9 @@
   margin-left: 300px;
   margin-top: 200px;
   border: 2px solid black;
+} */
+
+#calendar {
+  width: 60%;
 }
+
