--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,6 +1,15 @@
 body {
   padding: 0px;
   margin: 0px;
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    background: url(https://res.cloudinary.com/arpannln/image/upload/v1518989062/shaking.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 }
 
 .app-container {
@@ -41,6 +50,7 @@ body {
 .app-container {
   height: 100vh;
 }
+
 /*
 
 .App-logo {
