--- a/src/styling/welcome.css
+++ b/src/styling/welcome.css
@@ -15,7 +15,7 @@ body {
   width: 291px;
   height: 360px;
   border-radius: 25px;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: blue;
   flex-direction: column;
   z-index: 3;
 }
