--- a/public/styling/Calendar.css
+++ b/public/styling/Calendar.css
@@ -1,5 +1,6 @@
 #calendar-container {
   width: 66%;
+  height: 500px;
   padding-top: 20px;
   padding-right: 20px;
   padding-left: 20px;
@@ -55,7 +56,7 @@
 
 /* Add Animation */
 @-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
+  from {top:-300px; opacity:0}
   to {top:0; opacity:1}
 }
 
