fixed add modal functionality and style

--- a/public/styling/Calendar.css
+++ b/public/styling/Calendar.css
@@ -45,7 +45,6 @@
   background-color: #fefefe;
   margin: auto;
   padding: 0;
-  border: 1px solid #888;
   width: 30%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
@@ -82,7 +81,7 @@
 
 .modal-header {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: rgba(1, 50, 67, 1.0);
   color: white;
 }
 
@@ -92,10 +91,18 @@
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: rgba(1, 50, 67, 1.0);
   color: white;
 }
 
 .modal-footer button {
   margin: auto;
+  border-radius: 25px;
+  border: none;
+}
+
+.modal-footer button:hover {
+  cursor: pointer;
+  background-color: rgba(126, 192, 238, 1.0);
+
 }
