--- a/public/styling/Profile.css
+++ b/public/styling/Profile.css
@@ -5,7 +5,12 @@
   /* margin-top: 150px; */
 }
 
+body {
+  font-family:'Open Sans', sans-serif;
+}
+
 .user-content {
+  font-family: 'Open Sans', sans-serif;
   width: 30%;
   height: 50vh;
   margin-left: 20px;
