--- a/public/styling/Main.css
+++ b/public/styling/Main.css
@@ -12,7 +12,7 @@
   background-color: rgba(1, 50, 67, 1.0);
   /* background-color: rgba(126, 192, 238, 1.0); */
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 0;
 }
 
